samples/_failures_safe/1761149733_6ad2e6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee5cf092.c: In function ‘main’:
./samples/SAFE/__tmp_ee5cf092.c:182:5: error: expected declaration or statement at end of input
  182 |     }
      |     ^
